UI: Fix navbar right alignment
Issue #3304

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -557,6 +557,12 @@ td.number, th.number {
 .dir-rtl .bread-icon svg {
     margin: 0 0 0 5px;
 }
+.navbar-right {
+    margin-right: 0;
+}
+.navbar-right.flip {
+    margin-left: 0;
+}
 .breadcrumb > li.bread-icon + li::before {
     display: none;
 }
